fix: substitui construtor deprecado new URL por URI.create no Downloader